--- a/ecomm/src/App.css
+++ b/ecomm/src/App.css
@@ -36,7 +36,7 @@
 {
   
   background-position: center;
-  background-color:lightseagreen;
+  /* background-color:lightseagreen; */
   background-repeat: no-repeat;
   
   
