--- a/ecomm/src/first/resister.css
+++ b/ecomm/src/first/resister.css
@@ -3,9 +3,19 @@
     width: 500px;
     text-align: "center";
     display: inline-block;
+    margin-top: 120px;
     
 }
 .extra {
     margin-right:16px;
     }
+  .newone
+  
+{
+    background-color: rgb(0, 204, 255);
+    background-size: 500px;
+    color:black; 
+    color-adjust: blue;
+}
+    
   
